--- a/tidy/app/src/main/res/layout/room_recycle.xml
+++ b/tidy/app/src/main/res/layout/room_recycle.xml
@@ -9,7 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="6dp"
-        android:padding="16dp">
+        android:padding="16dp"
+        app:cardCornerRadius='20dp'
+        android:backgroundTint="@color/tidy_tertiary"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,8 +34,10 @@
             android:layout_height="0px"
             android:layout_weight="1"
             android:gravity="center"
-            android:textSize="30sp"
-            android:text="Room 1" />
+            android:textSize="24sp"
+            android:text="Room 1"
+            android:textColor="@color/tidy_primary"
+            android:textStyle="bold"/>
 
         </LinearLayout>
 
