--- a/tidy/app/src/main/res/layout-sw600dp/fragment_settings.xml
+++ b/tidy/app/src/main/res/layout-sw600dp/fragment_settings.xml
@@ -6,6 +6,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="143dp"
+            android:layout_height="85dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:src="@drawable/broom"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/space_id_label"
             android:layout_width="wrap_content"
@@ -23,10 +33,9 @@
             android:id="@+id/view_5"
             android:layout_width="400dp"
             android:layout_height="1dp"
-            android:layout_marginEnd="204dp"
             android:background="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/space_id_label"
             app:layout_constraintTop_toBottomOf="@+id/email_label"
             app:layout_constraintVertical_bias="0.356" />
 
@@ -53,9 +62,7 @@
             android:text="@string/Password"
             android:textSize="34sp"
             android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.482"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/password_label"
             app:layout_constraintTop_toBottomOf="@+id/view_4" />
 
         <EditText
@@ -73,11 +80,10 @@
             android:id="@+id/view_4"
             android:layout_width="400dp"
             android:layout_height="1dp"
-            android:layout_marginEnd="200dp"
             android:background="@color/black"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/password_label"
             app:layout_constraintTop_toBottomOf="@+id/email_label"
             app:layout_constraintVertical_bias="0.17" />
 
@@ -112,14 +118,15 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="292dp"
-            android:layout_marginTop="108dp"
             android:text="Settings"
             android:textColor="@color/tidy_primary"
             android:textSize="60sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="16dp"
+            android:gravity="center"/>
 
         <TextView
             android:id="@+id/first_name"
@@ -154,9 +161,7 @@
             android:text="@string/Email"
             android:textSize="34sp"
             android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.49"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/email_label"
             app:layout_constraintTop_toBottomOf="@+id/email_label" />
 
         <EditText
@@ -178,9 +183,7 @@
             android:text="@string/Space_ID"
             android:textSize="34sp"
             android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.482"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/space_id_label"
             app:layout_constraintTop_toBottomOf="@+id/space_id_label" />
 
         <EditText
@@ -318,10 +321,9 @@
         <View
             android:layout_width="400dp"
             android:layout_height="1dp"
-            android:layout_marginEnd="204dp"
             android:background="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/email_label"
             app:layout_constraintTop_toBottomOf="@+id/email_label"
             app:layout_constraintVertical_bias="0.0" />
 
@@ -329,12 +331,9 @@
             android:id="@+id/view_2"
             android:layout_width="100dp"
             android:layout_height="1dp"
-            android:layout_marginEnd="312dp"
             android:background="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/first_name"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/first_name"
+            app:layout_constraintStart_toStartOf="@+id/first_name_label"
             app:layout_constraintTop_toBottomOf="@+id/first_name_label"
             app:layout_constraintVertical_bias="0.0" />
 
