--- a/tidy/app/src/main/res/layout/fragment_settings.xml
+++ b/tidy/app/src/main/res/layout/fragment_settings.xml
@@ -6,6 +6,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="143dp"
+            android:layout_height="85dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:src="@drawable/broom"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/space_id_label"
             android:layout_width="wrap_content"
@@ -99,7 +109,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Welcome to the Settings View. Here you can change your user information."
-            android:textColor="#000000"
+            android:textColor="@color/tidy_primary"
             android:textSize="16sp"
             android:textStyle="bold"
             android:visibility="invisible"
