--- a/tidy/app/src/main/res/layout/history_recycle.xml
+++ b/tidy/app/src/main/res/layout/history_recycle.xml
@@ -2,14 +2,17 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".tasks.HistoryFragment">
+    tools:context=".tasks.HistoryFragment"
+    >
 
     <androidx.cardview.widget.CardView
         android:id="@+id/history_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius='20dp'
-        android:layout_marginVertical="6dp">
+        android:layout_marginVertical="6dp"
+        android:backgroundTint="@color/tidy_tertiary"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,26 +25,29 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="horizontal"
-                android:padding="6sp">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/task_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
                     android:layout_height="wrap_content"
+                    android:gravity="start"
                     android:text="@string/task_name"
-                    android:textColor="@android:color/black"
-                    android:textSize="20sp" />
+                    android:textColor="@color/tidy_primary"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/task_complete_date"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="end"
                     android:text="@string/task_complete_date"
-                    android:textColor="@android:color/black"
-                    android:textSize="20sp" />
+                    android:textColor="@color/tidy_primary"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -51,13 +57,17 @@
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
+
                 <TextView
                     android:id="@+id/task_user"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="start"
                     android:text="@string/task_user"
-                    android:textSize="15sp" />
+                    android:textColor="@color/tidy_primary"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/task_due_date"
                     android:layout_width="match_parent"
@@ -65,9 +75,11 @@
                     android:layout_weight="1"
                     android:gravity="end"
                     android:text="@string/task_due_date"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/tidy_primary"
+                    android:textStyle="bold"
                     android:textSize="15sp" />
             </LinearLayout>
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </layout>
