--- a/tidy/app/src/main/res/layout/tasks_recycle.xml
+++ b/tidy/app/src/main/res/layout/tasks_recycle.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius='20dp'
-        android:layout_marginVertical="6dp">
+        android:layout_marginVertical="6dp"
+        android:backgroundTint="@color/tidy_tertiary">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,15 +23,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="horizontal"
-                android:padding="6sp">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/task_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="start"
                     android:text="@string/task_name"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/tidy_tertiary"
                     android:textSize="24sp"
                     android:textStyle="bold"/>
 
@@ -42,8 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="horizontal"
-                android:padding="6sp">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/task_user"
@@ -51,16 +51,19 @@
                     android:layout_height="wrap_content"
                     android:gravity="start"
                     android:text="@string/task_user"
-                    android:textSize="20sp" />
+                    android:textColor="@color/tidy_tertiary"
+                    android:textSize="15sp"
+                    android:textStyle="bold"/>
                 <TextView
                     android:id="@+id/task_due_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="end"
+                    android:textColor="@color/tidy_tertiary"
                     android:text="@string/task_due_date"
-                    android:textColor="@android:color/black"
-                    android:textSize="24sp"/>
+                    android:textSize="15sp"
+                    android:textStyle="bold"/>
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
