--- a/tidy/app/src/main/res/layout/fragment_history.xml
+++ b/tidy/app/src/main/res/layout/fragment_history.xml
@@ -47,10 +47,11 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_hist"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
-            android:layout_marginTop="50dp"
+            android:layout_height="0dp"
             android:layout_marginLeft="50dp"
+            android:layout_marginTop="50dp"
             android:layout_marginRight="50dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/taskHistDescription" />
