--- a/tidy/wear/src/main/res/layout/task_row.xml
+++ b/tidy/wear/src/main/res/layout/task_row.xml
@@ -16,11 +16,11 @@
 
         <TextView
             android:id="@+id/taskName"
-            android:layout_width="110dp"
-            android:layout_height="21dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/task_name"
             android:textColor="@color/black"
-            android:textSize="18dp"
+            android:textSize="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.168"
