--- a/tidy/wear/src/main/res/values/colors.xml
+++ b/tidy/wear/src/main/res/values/colors.xml
@@ -11,5 +11,11 @@
     <color name="light_blue">#E3F2FD</color>
     <color name="egg_yellow">#FFE082</color>
     <color name="light_yellow">#FFF8E1</color>
-    <color name="tidy_green">#92AE3E</color>
+    <color name="tidy_primary">#24A19C</color>
+    <color name="tidy_secondary">#D96098</color>
+    <color name="tidy_secondary_light">#D39DB6</color>
+    <color name="tidy_tertiary">#F8F4F2</color>
+    <color name="tidy_background">#325288</color>
+    <color name="tidy_quaternary">#325288</color>
+    <color name="tidy_quaternary_light">#54647E</color>
 </resources>
