--- a/tidy/app/src/main/res/layout/add_supplies_fragment.xml
+++ b/tidy/app/src/main/res/layout/add_supplies_fragment.xml
@@ -31,10 +31,11 @@
 
 
         <LinearLayout
+            android:id="@+id/linear_above"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginHorizontal="80dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="5dp"
             android:gravity="center"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/addSupplyTitle"
@@ -46,8 +47,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@id/addSupplyTitle"
-                android:gravity="center"
-                android:layout_marginTop="20dp">
+                android:gravity="center">
                 <TextView
                     android:id="@+id/spaceIdName"
                     android:layout_width="wrap_content"
@@ -66,9 +66,9 @@
 
             <ImageButton
                 android:id="@+id/supplyImage"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_marginVertical="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="150dp"
                 android:adjustViewBounds="true"
                 android:background="@null"
                 android:scaleType="centerInside"
@@ -164,35 +164,36 @@
                 android:id="@+id/existingSupplyTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:text="@string/existing_supplies"
-                android:textSize="20sp"
-                android:textStyle="bold"
+                android:textSize="30dp"
                 app:layout_constraintBottom_toTopOf="@+id/recycler_view_rooms"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />
 
-            <ProgressBar
-                android:id="@+id/progress_circular"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@+id/recycler_view_rooms"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/recycler_view_rooms" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_view_rooms"
-                android:layout_width="match_parent"
-                android:layout_height="350dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="50dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/existingSupplyTitle" />
         </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/progress_circular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@+id/recycler_view_rooms"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/recycler_view_rooms" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_rooms"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linear_above" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
