--- a/tidy/app/src/main/res/layout/fragment_overview.xml
+++ b/tidy/app/src/main/res/layout/fragment_overview.xml
@@ -56,9 +56,9 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_rooms"
-            android:layout_width="600dp"
-            android:layout_height="800dp"
-            android:layout_marginTop="72dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="36dp"
             android:foregroundGravity="center_horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
