--- a/tidy/app/src/main/res/layout-sw600dp/fragment_settings.xml
+++ b/tidy/app/src/main/res/layout-sw600dp/fragment_settings.xml
@@ -105,10 +105,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Welcome to the Settings View. Here you can change your user information."
-            android:textColor="#000000"
+            android:textColor="@color/tidy_primary"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title" />
