--- a/tidy/app/src/main/res/layout/add_rooms_fragment.xml
+++ b/tidy/app/src/main/res/layout/add_rooms_fragment.xml
@@ -9,8 +9,8 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="143dp"
+            android:layout_height="85dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:src="@drawable/broom"
@@ -23,7 +23,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/add_room"
-            android:textSize="40sp"
+            android:textColor="@color/tidy_primary"
+            android:textSize="60sp"
+            android:textStyle="bold"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +37,7 @@
             android:layout_height="0dp"
             android:orientation="vertical"
             android:layout_marginHorizontal="80dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="16dp"
             android:gravity="center"
             app:layout_constraintTop_toBottomOf="@id/addRoomTitle">
 
@@ -51,7 +53,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/spaceID"
-                    android:textSize="20sp"
+                    android:textColor="@color/tidy_primary"
+                    android:textSize="16sp"
                     android:textStyle="bold"/>
                 <TextView
                     android:id="@+id/spaceIdHolder"
@@ -59,7 +62,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4sp"
                     android:hint="@string/invalid"
-                    android:textSize="20sp" />
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <ImageButton
@@ -141,24 +145,23 @@
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/UpdateLayout"
-                    android:layout_width="match_parent"
+            <LinearLayout
+                android:id="@+id/UpdateLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <Button
+                    android:id="@+id/UpdateRoomButton"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:visibility="gone">
+                    android:layout_gravity="center"
+                    android:text="@string/update_room"
+                    android:textSize="20sp" />
 
-                    <Button
-                        android:id="@+id/UpdateRoomButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="@string/update_room"
-                        android:textSize="20sp" />
-
-                </LinearLayout>
-
+            </LinearLayout>
 
 
             <TextView
