--- a/tidy/app/src/main/res/layout/fragment_add_tasks.xml
+++ b/tidy/app/src/main/res/layout/fragment_add_tasks.xml
@@ -6,14 +6,12 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="143dp"
+            android:layout_height="85dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:src="@drawable/broom"
@@ -26,7 +24,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/add_tasks"
-            android:textSize="40sp"
+            android:textColor="@color/tidy_primary"
+            android:textSize="60sp"
+            android:textStyle="bold"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginHorizontal="80dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="16dp"
             android:gravity="center"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/addTasksTitle"
@@ -46,15 +46,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@id/addTasksTitle"
+                app:layout_constraintTop_toBottomOf="@id/addSupplyTitle"
                 android:gravity="center"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="0dp">
+
                 <TextView
                     android:id="@+id/spaceIdName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/spaceID"
-                    android:textSize="20sp"
+                    android:textColor="@color/tidy_primary"
+                    android:textSize="16sp"
                     android:textStyle="bold"/>
                 <TextView
                     android:id="@+id/spaceIdHolder"
@@ -62,7 +64,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4sp"
                     android:hint="@string/invalid"
-                    android:textSize="20sp" />
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
             </LinearLayout>
 
 
