--- a/tidy/app/src/main/res/layout/fragment_admin_page2.xml
+++ b/tidy/app/src/main/res/layout/fragment_admin_page2.xml
@@ -13,7 +13,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/admin_title"
-            android:textSize="40sp"
+            android:textColor="@color/tidy_primary"
+            android:textSize="60sp"
+            android:textStyle="bold"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,6 +31,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
         <LinearLayout
             android:id="@+id/spaceIDInfo"
             android:layout_width="match_parent"
@@ -36,13 +39,15 @@
             android:orientation="horizontal"
             app:layout_constraintTop_toBottomOf="@id/adminTitle"
             android:gravity="center"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="16dp">
+
             <TextView
                 android:id="@+id/spaceIdName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/spaceID"
-                android:textSize="20sp"
+                android:textColor="@color/tidy_primary"
+                android:textSize="16sp"
                 android:textStyle="bold"/>
             <TextView
                 android:id="@+id/spaceIdHolder"
@@ -50,7 +55,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4sp"
                 android:hint="@string/invalid"
-                android:textSize="20sp" />
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
         </LinearLayout>
 
         <LinearLayout
