--- a/tidy/wear/src/main/res/layout/task_row.xml
+++ b/tidy/wear/src/main/res/layout/task_row.xml
@@ -20,22 +20,23 @@
             android:layout_height="wrap_content"
             android:text="@string/task_name"
             android:textColor="@color/tidy_primary"
-            android:textSize="18dp"
+            android:textSize="9sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.168"
+            app:layout_constraintHorizontal_bias="0.159"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.36" />
 
         <TextView
             android:id="@+id/taskDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
             android:text="@string/task_date"
             android:textColor="@color/black"
-            android:textSize="9sp"
+            android:textSize="6sp"
             app:layout_constraintStart_toStartOf="@+id/taskName"
             app:layout_constraintTop_toBottomOf="@+id/taskName" />
 
