--- a/tidy/app/src/main/res/layout/add_supplies_fragment.xml
+++ b/tidy/app/src/main/res/layout/add_supplies_fragment.xml
@@ -37,7 +37,6 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginHorizontal="80dp"
-            android:layout_marginTop="16dp"
             android:gravity="center"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/addSupplyTitle"
@@ -49,8 +48,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@id/addSupplyTitle"
-                android:gravity="center"
-                android:layout_marginTop="40dp">
+                android:gravity="center">
 
                 <TextView
                     android:id="@+id/spaceIdName"
